[project]
name = "genllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.0.5",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "semantic-chunkers>=0.1.1",
    "semantic-router>=0.1.11",
    "yfinance>=0.2.65",
]
